--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://admin:mengya2025%21@meng.dsctuaw.mongodb.net/?retryWrites=true&w=majority&appName=MENG
+MONGODB_URI=mongodb+srv://admin:mengya2025@meng.dsctuaw.mongodb.net/?retryWrites=true&w=majority&appName=MENG
 MONGODB_DB=MENG
