--- a/package.json
+++ b/package.json
@@ -17,4 +17,15 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.7"
   }
+  "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
+  },
+  "dependencies": {
+  "next": "^13.4.0",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0"
+  }
+
 }
